force-app/main/default/objects/Test__c/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>A2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>