force-app/main/default/objects/Test__c/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <label>A3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>