force-app/main/default/objects/Test__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CURP</fullName>
            </value>
            <value>
                <fullName>INE</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>