force-app/main/default/objects/Test__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>