force-app/main/default/objects/Test__c/recordTypes/Comunidad.recordType-meta.xml
<RecordType>
    <fullName>Comunidad</fullName>
    <active>true</active>
    <label>Comunidad</label>
</RecordType>